--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.3",
+    "morgan": "~1.9.1",
+    "nanoid": "^3.1.29"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
