--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
     "morgan": "~1.9.1",
